re PR tree-optimization/42927 (type mismatch in shift expression produces ice with -O3)

2010-02-03  Richard Guenther  <rguenther@suse.de>

	PR middle-end/42927
	* tree-cfg.c (verify_gimple_assign_binary): Fix shift verification.

	* gcc.c-torture/compile/pr42927.c: New testcase.

From-SVN: r156464